<resources>
    <string name="app_name">MedReminder</string>
    <string name="sign_in_str">Login to MedReminder</string>
    <string name="username_str">Username</string>
    <string name="password_str">Password</string>
    <string name="login_str">Login</string>
    <string name="errmsg_txt">Failed to Login.\nWrong Username or Password.</string>
    <string name="logout_txt">Logout</string>
    <string name="name_str">Name:</string>
    <string name="email_str">Email:</string>
    <string name="phone_str">Phone:</string>
    <string name="doc_profile_str">My Doctor\'s Profile</string>
    <string name="my_profile_str">My Profile</string>
    <string name="profile_txt">Profile</string>
    <string name="medication_information_txt">Medication Information</string>
    <string name="id_str">Id</string>
    <string name="description_str">Description</string>
    <string name="frequency_str">Take medicine every: </string>
    <string name="first_notification_time_str">First Notification Time</string>
    <string name="second_notification_time_str">Second Notification Time</string>
    <string name="my_medicine_str">My Medicine</string>
    <string name="notoi_btn_str">I already take my medicine</string>
</resources>