<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_prompt_doc_name_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_doc_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc" />

    <TextView
        android:id="@+id/profile_prompt_doc_phone_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_doc_phone"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc_name_str" />

    <TextView
        android:id="@+id/profile_prompt_doc_email_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_doc_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc_phone_str" />

    <TextView
        android:id="@+id/profile_prompt_doc_phone"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/phone_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc_name" />

    <TextView
        android:id="@+id/profile_prompt_doc"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:gravity="start|center_vertical"
        android:text="@string/doc_profile_str"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_email" />

    <TextView
        android:id="@+id/profile_prompt_doc_name"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:text="@string/name_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc" />

    <TextView
        android:id="@+id/profile_prompt_doc_email"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/email_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_doc_phone" />

    <TextView
        android:id="@+id/profile_prompt_me"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:gravity="start|center_vertical"
        android:text="@string/my_profile_str"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_prompt_name"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:text="@string/name_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_me" />

    <TextView
        android:id="@+id/profile_prompt_phone"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/phone_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_name" />

    <TextView
        android:id="@+id/profile_prompt_email"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/email_str"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_phone" />

    <TextView
        android:id="@+id/profile_prompt_name_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_me" />

    <TextView
        android:id="@+id/profile_prompt_phone_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_phone"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_name_str" />

    <TextView
        android:id="@+id/profile_prompt_email_str"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_prompt_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_prompt_phone_str" />

</androidx.constraintlayout.widget.ConstraintLayout>